# MultiSearch-Tool-RAG-WEB

./: README.md
.devcontainer/: devcontainer.json
multi-search-tool/: README.md  app.py  pyproject.toml
multi-search-tool/multi_search_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mutli-search-tool/: .env  app3.py  pyproject.toml
mutli-search-tool/document_gpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
